fix: update order api
