# walletpay/java/lib/api/openapi.yaml
@@ -7,11 +7,21 @@ servers:
 security:
 - ApiKeyAuth: []
 paths:
-  /api/v1/pay/orders:
+  /api/v1/apps/{appId}/orders:
     get:
       description: List orders.
       operationId: v1.order.list
       parameters:
+      - description: Specified the app id.
+        explode: false
+        in: path
+        name: appId
+        required: true
+        schema:
+          description: Specified the app id.
+          example: app_12345xsfei
+          type: string
+        style: simple
       - description: Limit the number of returned items
         explode: true
         in: query
@@ -102,6 +112,17 @@ paths:
     post:
       description: Create a new order.
       operationId: v1.order.create
+      parameters:
+      - description: Specified the app id.
+        explode: false
+        in: path
+        name: appId
+        required: true
+        schema:
+          description: Specified the app id.
+          example: app_12345xsfei
+          type: string
+        style: simple
       requestBody:
         content:
           application/json:
