# walletpay/javascript/src/openapi/types/PromiseAPI.ts
@@ -27,23 +27,25 @@ export class PromiseOrderApi {
     /**
      * Create a new order.
      * Create Order
+     * @param appId Specified the app id.
      * @param orderIn 
      */
-    public v1OrderCreate(orderIn: OrderIn, _options?: Configuration): Promise<OrderOut> {
-        const result = this.api.v1OrderCreate(orderIn, _options);
+    public v1OrderCreate(appId: string, orderIn: OrderIn, _options?: Configuration): Promise<OrderOut> {
+        const result = this.api.v1OrderCreate(appId, orderIn, _options);
         return result.toPromise();
     }
 
     /**
      * List orders.
      * List Orders
+     * @param appId Specified the app id.
      * @param size Limit the number of returned items
      * @param page Specifying the page index
      * @param walletId Optional wallet id
      * @param accountId Optional account id
      */
-    public v1OrderList(size?: number, page?: number, walletId?: string, accountId?: string, _options?: Configuration): Promise<ListResponseOrderOut> {
-        const result = this.api.v1OrderList(size, page, walletId, accountId, _options);
+    public v1OrderList(appId: string, size?: number, page?: number, walletId?: string, accountId?: string, _options?: Configuration): Promise<ListResponseOrderOut> {
+        const result = this.api.v1OrderList(appId, size, page, walletId, accountId, _options);
         return result.toPromise();
     }
 
